--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Professional Weather</title>
 </head>
 <body>
+  <header> 
+    <form>
+  <input type="search" placeholder="Enter a city">
+  <input type="submit" value="search">
+    </form>
+  </header>
+   <main>
     <h1> Pretty Pink Weather </h1>
+   </main>
+<footer>
+  This project was coded by <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a>
+  is open-sourced on
+  <a href="https://github.com/Alizwa-Ntlai/Professional-Weather-Application" target="_blank"> Github</a>
+    and hosted on 
+    <a href="https://professional-weather-application.netlify.app/" target="_blank"> Netlify </a>
+</footer>
 </body>
 </html>
