completed HTML code

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 <body>
   <header> 
     <form>
-  <input type="search" placeholder="Enter a city">
-  <input type="submit" value="search">
+  <input type="search" placeholder="Enter a city"/>
+  <input type="submit" value="search"/>
     </form>
   </header>
    <main>
-    <h1> Pretty Pink Weather </h1>
+    <h1> Plettenberg Bay </h1>
+    <p>
+      Friday 16:19, scattered clouds
+      <br>
+      Humidity: 66%, Wind: 3.13km/h
+    </p>
    </main>
 <footer>
   This project was coded by <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a>
