--- a/index.html
+++ b/index.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Professional Weather</title>
-</head>
-<body>
-  <header> 
-    <form>
-  <input type="search" placeholder="Enter a city"/>
-  <input type="submit" value="search"/>
-    </form>
-  </header>
-   <main>
-    <h1> Plettenberg Bay </h1>
-    <p>
-      Friday 16:19, scattered clouds
-      <br>
-      Humidity: 66%, Wind: 3.13km/h
-    </p>
-    <br>
-    23ºC
-
-   </main>
-<footer>
-  This project was coded by <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a>
-  is open-sourced on
-  <a href="https://github.com/Alizwa-Ntlai/Professional-Weather-Application" target="_blank"> Github</a>
-    and hosted on 
-    <a href="https://professional-weather-application.netlify.app/" target="_blank"> Netlify </a>
-</footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <h1>East London</h1>
+      <p>
+        Friday 16:19, scattered clouds
+        <br />
+        Humidity: 66%, Wind: 3.13km/h
+      </p>
+      <br />
+      23ºC
+    </main>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a>
+      is open-sourced on
+      <a
+        href="https://github.com/Alizwa-Ntlai/Professional-Weather-Application"
+        target="_blank"
+      >
+        Github</a
+      >
+      and hosted on
+      <a
+        href="https://professional-weather-application.netlify.app/"
+        target="_blank"
+      >
+        Netlify
+      </a>
+    </footer>
+  </body>
 </html>
