--- a/index.html
+++ b/index.html
@@ -3,25 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap" rel="stylesheet">
     <title>Professional Weather</title>
   </head>
+  <div class="project-body">
   <body>
     <header>
       <form>
-        <input type="search" placeholder="Enter a city" />
-        <input type="submit" value="search" />
+        <input type="search" placeholder="Enter a city" class="input-search" />
+        <input type="submit" value="search" class="input-submit"/>
       </form>
     </header>
     <main>
+      <div class="weather-app-data">
+        <div>
       <h1>East London</h1>
       <p>
         Friday 16:19, scattered clouds
         <br />
-        Humidity: 66%, Wind: 3.13km/h
+        Humidity: <strong>66%</strong> , Wind: <strong>3.13km/h</strong>
       </p>
-      <br />
-      23ºC
+      </div>
+      <div class="weather-app-temperature">
+        <div class="weather-app-icon">🌤</div>
+      <div class="weather-app-temperature-value">23</div>
+      <div class="weather-app-unit">ºC</div>
+      </div>
     </main>
+    </body>
     <footer>
       This project was coded by
       <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a>
@@ -40,5 +52,6 @@
         Netlify
       </a>
     </footer>
+  </div>
   </body>
 </html>
