Added api's and js functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Professional Weather</title>
   </head>
   <div class="project-body">
@@ -21,7 +21,7 @@
     <main>
       <div class="weather-app-data">
         <div>
-      <h1 id="weather-app-city">East London</h1>
+      <h1 id="city">East London</h1>
       <p>
         Friday 16:19, scattered clouds
         <br />
