--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <div class="weather-app-data">
         <div>
-      <h1 id="city">East London</h1>
+      <h1 id="city"></h1>
       <p>
         Friday 16:19, scattered clouds
         <br />
@@ -30,7 +30,7 @@
       </div>
       <div class="weather-app-temperature">
         <div class="weather-app-icon">🌤</div>
-      <div class="weather-app-temperature-value">23</div>
+      <div class="weather-app-temperature-value" id="temperature"></div>
       <div class="weather-app-unit">ºC</div>
       </div>
     </main>
