--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div>
       <h1 id="city"></h1>
       <p>
-        Friday 16:19, scattered clouds
+        <span id="time">   </span> <span id="description">  </span>
         <br />
-        Humidity: <strong>66%</strong> , Wind: <strong>3.13km/h</strong>
+        Humidity: <strong id="humidity"></strong> , Wind: <strong id="speed"></strong>
       </p>
       </div>
       <div class="weather-app-temperature">
