Added more functions of the data and icon

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         Humidity: <strong id="humidity"></strong> , Wind: <strong id="speed"></strong>
       </p>
       </div>
-      <div class="weather-app-temperature">
-        <div class="weather-app-icon">🌤</div>
+      <div class="weather-app-temperature-container">
+        <div id="icon">
+        </div>
       <div class="weather-app-temperature-value" id="temperature"></div>
       <div class="weather-app-unit">ºC</div>
       </div>
