Added forecast HTML and CSS
Added full forecast on HTML, and positioned and styled using CSS

--- a/index.html
+++ b/index.html
@@ -35,6 +35,58 @@
       <div class="weather-app-unit">ºC</div>
       </div>
     </main>
+<div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>23º</strong>
+              </div>
+              <div class="weather-forecast-temperature">13º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Wed</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>25º</strong>
+              </div>
+              <div class="weather-forecast-temperature">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Thur</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>18º</strong>
+              </div>
+              <div class="weather-forecast-temperature">12º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>21º</strong>
+              </div>
+              <div class="weather-forecast-temperature">11º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>19º</strong>
+              </div>
+              <div class="weather-forecast-temperature">10º</div>
+            </div>
+          </div>
+        </div>
     </body>
     <footer>
       This project was coded by
